# python-incremental

./: .coveragerc  .gitignore  MANIFEST.in  NEWS.rst  README.rst  SECURITY.md  _build_meta.py  pyproject.toml  requirements_lint.txt  requirements_mypy.in  requirements_mypy.txt  requirements_tests.in  requirements_tests.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/actions/build-dist/: action.yml
.github/actions/publish-docs/: action.yml
.github/workflows/: release.yml  tests.yaml
src/incremental/: __init__.py  _hatch.py  update.py
src/incremental/newsfragments/: 100.bugfix  106.bugfix  122.bugfix.rst  141.feature.rst  2.doc  80.bugfix  81.bugfix  86.removal  88.removal  90.feature  92.removal  93.feature  99.feature.rst  99.removal.rst
src/incremental/tests/: test_pyproject.py  test_update.py  test_version.py
tests/: test_examples.py
tests/example_hatchling/: pyproject.toml
tests/example_hatchling/example_hatchling/: _version.py
tests/example_noop/: pyproject.toml  setup.py
tests/example_noop/example_noop/: __init__.py
tests/example_setuppy/: setup.py
tests/example_setuppy/src/example_setuppy/: __init__.py  _version.py
tests/example_setuptools/: pyproject.toml
tests/example_setuptools/src/example_setuptools/: __init__.py  _version.py
