[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Incremental"
dynamic = ["version"]
maintainers = [
    {name = "Amber Brown", email = "hawkowl@twistedmatrix.com"},
    {name = "Tom Most", email = "twm@freecog.net"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: Hatch",
    "Framework :: Setuptools Plugin",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
description = "A CalVer version manager that supports the future."
readme = "README.rst"
dependencies = [
    "packaging >= 17.0",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
scripts = [
    # This extra remains for backwards compatibility.
]

[project.urls]
Homepage = "https://github.com/twisted/incremental"
Documentation = "https://twisted.org/incremental/docs/"
Issues = "https://github.com/twisted/incremental/issues"
Changelog = "https://github.com/twisted/incremental/blob/trunk/NEWS.rst"

[project.scripts]
incremental = "incremental.update:_main"

[project.entry-points."distutils.setup_keywords"]
use_incremental = "incremental:_get_distutils_version"
[project.entry-points."setuptools.finalize_distribution_options"]
incremental = "incremental:_get_setuptools_version"
[project.entry-points.hatch]
incremental = "incremental._hatch"

[tool.hatch.build.targets.sdist]
include = [
    "/src/incremental",
    "/tests",
    "/NEWS.rst",
    "/LICENSE",
    "/NEWS.rst",
    "/SECURITY.md",
    "/.coveragerc",
    "/tox.ini",
    "/requirements_*.in",
    "/requirements_*.txt",
]
exclude = [
    "/src/incremental/newsfragments",
    "/tests/example_*/src/*.egg-info",
    "/tests/example_*/build",
    "/tests/example_*/dist",
]


[tool.hatch.build.targets.wheel]
packages = ["src/incremental"]

[tool.hatch.version]
source = "code"
search-paths = ["src"]
expression = "__version__.public()"
path = "src/incremental/_version.py"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "I",
]
ignore = [
    "E501",
]

[tool.towncrier]
filename = "NEWS.rst"
package_dir = "src/"
package = "incremental"
issue_format = "`#{issue} <https://github.com/twisted/incremental/issues/{issue}>`__"
